Name:           Waltz
Version:        0.0
Cabal-Version:  >= 1.2
License:        BSD3
Author:         Iain McCoy
Synopsis:       The deranged blatherings of a madman
Build-Type:     Simple

Executable incrm
  Hs-Source-Dirs: src
  Main-Is: Main.hs
  build-depends:  base, extcore, mtl, safe, containers, array
  ghc-options: -Werror -fwarn-unused-imports
